Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108440

Wrong icon picked in QMenu in multi monitor multi DPI setup (Vista style)

XMLWordPrintable

    • Windows
    • 2d20406f5996e42dfb06c6c19ae28a92314929bf, 4928414d9 (6.4)

      Run attached example in multi monitor setup where one is 100% and another in 125% scale. Right clicking the application window on 125% monitor shows correct cyan variant of the icon, but on 100% scale it scales the cyan version down to 100% instead of picking the green icon.

        1. qtbug108440_1.zip
          2 kB
        2. qtbug108440.jpg
          qtbug108440.jpg
          130 kB
        3. qtbug108440.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes