Vista Style: Use correct action icon pixmaps matching the device pixel ratio

Extend change 5911335756dff5a917e4a7ccf025816c08ddd656 to the Vista
style (using the paint device's ratio).

Fixes: QTBUG-108440
Task-number: QTBUG-85885
Change-Id: Ib0b5fcc943a18896b770b382b39bbb684238a618
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 2d20406f5996e42dfb06c6c19ae28a92314929bf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>